# VoE

./: Cargo.toml  README.md  config.example.toml  iscsi-multi-target.toml.example  run-vm
.claude/: settings.local.json
.devlog/: 2026-01-06-102931-0be3ac85.json  2026-01-06-113532-0be3ac85.json  2026-01-06-124126-0be3ac85.json  2026-01-06-142023-0be3ac85.json
aoe-server/: Cargo.toml
aoe-server/docs/: 03-STORAGE-TRAIT.md  05-BLOB-STORE.md
aoe-server/src/: lib.rs  main.rs
aoe-server/src/blob/: file.rs  mod.rs
aoe-server/src/protocol/: build.rs
aoe-server/src/server/: listener.rs  target.rs
aoe-server/src/storage/: file.rs  mod.rs
aoe-server/src/storage/cas/: mod.rs  snapshot.rs
docs/: 00-INDEX.md  01-ARCHITECTURE.md  02-AOE-PROTOCOL.md  04-CAS-BACKEND.md  06-IMPLEMENTATION.md
examples/: cas_test.rs
src/: config.rs  lib.rs
src/cas/: mod.rs  protocol.rs  server.rs  storage.rs
src/iscsi/: cas_device.rs  clone.rs  mod.rs  pdu.rs  registry.rs  scsi.rs  session.rs
src/nbd/: mod.rs  protocol.rs  server.rs
src/protocol/: ata.rs  build.rs  mod.rs  parse.rs  types.rs
src/server/: listener.rs  mod.rs  target.rs
src/storage/: cas_client.rs  mod.rs
src/storage/cas/: mod.rs  tree.rs
