[package]
name = "aoe-server"
version = "0.1.0"
edition = "2021"
description = "ATA over Ethernet server with pluggable storage backends"
license = "MIT"

[dependencies]
# Raw ethernet frame handling
pnet = "0.35"
pnet_datalink = "0.35"

# Async runtime (optional, may go sync first)
# tokio = { version = "1", features = ["full"] }

# Hashing for CAS backend
blake3 = "1.5"
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization for metadata persistence
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Memory-mapped files for efficient I/O
memmap2 = "0.9"

# Compression for CAS backend
lz4_flex = "0.11"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Binary serialization for iSCSI/NBD
byteorder = "1"

# Random number generation
rand = "0.8"

# libc for NBD error codes
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "aoe-server"
path = "src/main.rs"

[[bin]]
name = "cas-server"
path = "src/bin/cas-server.rs"

[[bin]]
name = "nbd-server"
path = "src/bin/nbd-server.rs"
